Fix alignment and margins

--- a/FilmRating/ClientApp/src/app/film/film-info/film-info.component.css
+++ b/FilmRating/ClientApp/src/app/film/film-info/film-info.component.css
@@ -2,6 +2,10 @@
     margin-top: 4rem !important;
 }
 
+.mt-4 {
+    margin-top: 2rem !important;
+}
+
 .big-image {
     width: 300px !important;
 }
